support -XX:PrintAdaptiveSizePolicy for -XX:+UseConcMarkSweepGC